# sentinel-cli

./: README.md  config.json  main.py  pyproject.toml
.github/workflows/: python-app.yml
sentinel/: __init__.py  auth.py  cli.py  core.py  exceptions.py
sentinel/ctyper/: Typer.py
sentinel/scripts/: basic_system_status.sh  top.py
sentinel/serv/: sentinel_bottle.py
sentinel/utils/: cron.py  decorators.py  loader.py
tests/: test_sentinel.py
