[tool.poetry]
name = "sentinel"
version = "0.1.0"
description = ""
authors = ["AJITH-klepsydra <ajithpmuralidharan01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.1"
colorama = "^0.4.4"
shellingham = "^1.4.0"
requests = "^2.27.1"
psutil = "^5.9.0"
requests-mock = "^1.9.3"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:main"

